--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
+
+    - id: commit
+      uses: prompt/actions-commit-hash@v3.0.0
 
     - name: Set up Python 3.11
       uses: actions/setup-python@v3
@@ -36,6 +38,6 @@ jobs:
     - name: Upload add-on artifact
       uses: actions/upload-artifact@v3.1.3
       with:
-        name: answerset.ankiaddon
+        name: answerset-${{ steps.commit.outputs.short }}
         path: answerset.ankiaddon
         if-no-files-found: error
