--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,13 @@
-name: Build Answer Set
+name: Build
 
 on:
   push:
     branches:
-    - "main"
+      - "main"
+
+  pull_request:
+    branches:
+      - "main"
 
 permissions:
   contents: read
@@ -13,30 +17,39 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out repository
-      uses: actions/checkout@v3
+      - name: Check out repository
+        uses: actions/checkout@v3
 
-    - name: Get commit hash
-      id: commit
-      uses: prompt/actions-commit-hash@v3.0.0
+      - name: Get commit hash
+        id: commit
+        uses: prompt/actions-commit-hash@v3.0.0
 
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.11"
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.11"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytest
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
 
-    - name: Build add-on
-      run: |
-        make build
+      - name: Test and build add-on
+        run: |
+          make build
 
-    - name: Upload add-on artifact
-      uses: actions/upload-artifact@v3.1.3
-      with:
-        name: answerset-${{ steps.commit.outputs.short }}
-        path: answerset.ankiaddon
-        if-no-files-found: error
+      - name: Upload test results artifact
+        uses: actions/upload-artifact@v3.1.3
+        if: success() || failure()
+        with:
+          name: test-results
+          path: |
+            ${{ github.event_path }}
+            pytest-junit.xml
+
+      - name: Upload add-on artifact
+        uses: actions/upload-artifact@v3.1.3
+        with:
+          name: answerset-${{ steps.commit.outputs.short }}
+          path: answerset.ankiaddon
+          if-no-files-found: error
