--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,35 +1,31 @@
-name: Test Answer Set
+name: Test
 
 on:
   push:
-    branches:
-    - "feature/**"
-
-  pull_request:
-    branches:
-    - "main"
+    branches-ignore:
+      - "main"
 
 permissions:
   contents: read
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out repository
-      uses: actions/checkout@v3
+      - name: Check out repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.11"
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.11"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytest
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
 
-    - name: Test add-on
-      run: |
-        make test
+      - name: Test add-on
+        run: |
+          make test
