--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,14 +38,17 @@ jobs:
         run: |
           make build
 
-      - name: Upload test results artifact
+      - name: Create test-results directory
+        run: |
+          mkdir -p ./test-results
+          cp "$GITHUB_EVENT_PATH" ./pytest-junit.xml ./test-results
+
+      - name: Upload test-results artifact
         uses: actions/upload-artifact@v3.1.3
         if: success() || failure()
         with:
           name: test-results
-          path: |
-            ${{ github.event_path }}
-            pytest-junit.xml
+          path: test-results
 
       - name: Upload add-on artifact
         uses: actions/upload-artifact@v3.1.3
