--- a/.github/workflows/test-results.yml
+++ b/.github/workflows/test-results.yml
@@ -30,6 +30,6 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
           commit: ${{ github.event.workflow_run.head_sha }}
-          event_file: artifacts/test-results/event.json
+          event_file: artifacts/event.json
           event_name: ${{ github.event.workflow_run.event }}
-          files: artifacts/test-results/pytest-junit.xml
+          files: artifacts/pytest-junit.xml
