--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: "CI"
 
 on:
   push:
@@ -14,6 +14,7 @@ permissions:
 
 jobs:
   build:
+    name: "Build"
     runs-on: ubuntu-latest
 
     steps:
