--- a/.github/workflows/test-results.yml
+++ b/.github/workflows/test-results.yml
@@ -1,9 +1,9 @@
-name: Test Results
+name: "Test Results"
 
 on:
   workflow_run:
     workflows:
-      - "Build"
+      - "CI"
 
     types:
       - completed
@@ -15,6 +15,7 @@ permissions:
 
 jobs:
   test-results:
+    name: "Publish Test Results"
     runs-on: ubuntu-latest
     if: github.event.workflow_run.conclusion != 'skipped'
 
