--- a/answerset/config.json
+++ b/answerset/config.json
@@ -5,5 +5,6 @@
     "Equivalent Strings": [],
     "Ignore Case": true,
     "Ignore Separators in Brackets": true,
-    "Ignored Characters": " .-"
+    "Ignored Characters": " .-",
+    "Numeric Comparison Factor": 1.0
 }
