--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,11 +31,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov mypy aqt[qt6]
+          pip install pytest pytest-cov ruff mypy aqt[qt6]
 
       - name: Test and build add-on
         run: |
-          make build
+          make build RUFF_OUTPUT_FORMAT=github
 
       - name: Create test-results directory
         run: |
